--- a/.classpath
+++ b/.classpath
@@ -11,6 +11,7 @@
 	<classpathentry kind="src" path="actions"/>
 	<classpathentry kind="src" path="interfaces"/>
 	<classpathentry kind="src" path="resources"/>
-	<classpathentry kind="lib" path="libs/selenium-server-standalone-2.53.1.jar"/>
+	<classpathentry kind="lib" path="libs/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="libs/testng-6.9.10.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
