--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,41 @@
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="lib" path="libs/selenium-server-standalone-3.141.59.jar"/>
 	<classpathentry kind="lib" path="libs/testng-6.9.10.jar"/>
+	<classpathentry kind="lib" path="libs/bsh-2.0b4.jar"/>
+	<classpathentry kind="lib" path="libs/commons-codec-1.11.jar"/>
+	<classpathentry kind="lib" path="libs/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="libs/commons-lang3-3.8.1.jar"/>
+	<classpathentry kind="lib" path="libs/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="libs/config-1.3.2.jar"/>
+	<classpathentry kind="lib" path="libs/freemarker-2.3.23.jar"/>
+	<classpathentry kind="lib" path="libs/gson-2.8.5.jar"/>
+	<classpathentry kind="lib" path="libs/guice-4.1.0.jar"/>
+	<classpathentry kind="lib" path="libs/hamcrest-all-1.3.jar"/>
+	<classpathentry kind="lib" path="libs/hamcrest-core-1.1.jar"/>
+	<classpathentry kind="lib" path="libs/httpclient-4.5.9.jar"/>
+	<classpathentry kind="lib" path="libs/httpcore-4.4.10.jar"/>
+	<classpathentry kind="lib" path="libs/jackson-annotations-2.9.4.jar"/>
+	<classpathentry kind="lib" path="libs/jackson-core-2.9.4.jar"/>
+	<classpathentry kind="lib" path="libs/jackson-databind-2.9.4.jar"/>
+	<classpathentry kind="lib" path="libs/jarchivelib-1.0.0.jar"/>
+	<classpathentry kind="lib" path="libs/javafaker-0.14.jar"/>
+	<classpathentry kind="lib" path="libs/jcommander-1.48.jar"/>
+	<classpathentry kind="lib" path="libs/joda-time-2.0.jar"/>
+	<classpathentry kind="lib" path="libs/jsoup-1.11.3.jar"/>
+	<classpathentry kind="lib" path="libs/junit-4.10.jar"/>
+	<classpathentry kind="lib" path="libs/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="libs/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="libs/mockito-core-1.10.8.jar"/>
+	<classpathentry kind="lib" path="libs/owner-1.0.8.jar"/>
+	<classpathentry kind="lib" path="libs/reportng-1.1.4.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-api-1.7.24.jar"/>
+	<classpathentry kind="lib" path="libs/snakeyaml-1.15.jar"/>
+	<classpathentry kind="lib" path="libs/sqlite-jdbc-3.8.11.1.jar"/>
+	<classpathentry kind="lib" path="libs/velocity-dep-1.5.jar"/>
+	<classpathentry kind="lib" path="libs/webdrivermanager-3.6.0.jar"/>
+	<classpathentry kind="lib" path="libs/bson-3.3.0.jar"/>
+	<classpathentry kind="lib" path="libs/extentreports-4.0.9.jar"/>
+	<classpathentry kind="lib" path="libs/httpmime-4.5.2.jar"/>
+	<classpathentry kind="lib" path="libs/mongodb-driver-3.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
